# icarusalg

./: CMakeLists.txt  README.md
fcl/: CMakeLists.txt
fcl/services/: detectorclocks_icarus.fcl  detectorproperties_icarus.fcl  messages_icarus.fcl  opticalproperties_icarus.fcl  services_basic_icarus.fcl
fcl/utilities/: test_geometry_icarus.fcl  test_geometry_iterators_icarus.fcl
icarusalg/: CMakeLists.txt
icarusalg/Geometry/: CMakeLists.txt  ChannelMapIcarusAlg.cxx  ChannelMapIcarusAlg.h  GeoObjectSorterICARUS.cxx  GeoObjectSorterPMTasTPC.cxx  GeoObjectSorterPMTasTPC.h  ICARUSChannelMapAlg.cxx  ICARUSChannelMapAlg.h  ICARUSstandaloneGeometrySetup.h  LoadStandardICARUSgeometry.h  geometry_icarus.fcl  use_no_overburden_geometry_icarus.fcl  use_overburden_geometry_icarus.fcl
icarusalg/Geometry/details/: AuxDetSorting.cxx  AuxDetSorting.h  ChannelToWireMap.cxx  ChannelToWireMap.h  GeometryObjectCollections.h  PMTsorting.cxx  PMTsorting.h  ROPandTPCsetBuildingAlg.cxx  ROPandTPCsetBuildingAlg.h
icarusalg/Geometry/gdml/: README  gen_crt_frags.py  gen_crt_frags_refactored.py  generate_icarus_geometry_refactored_18May22.pl  icarus_complete_11mar2021_no_overburden_rotUV_nowires.gdml  icarus_complete_20201107_no_overburden_nowires.gdml  icarus_complete_20201107_nowires.gdml  icarus_complete_20210527_no_overburden_nowires.gdml  icarus_complete_20210527_overburden_nowires.gdml  icarus_complete_20220518_overburden_nowires.gdml  icarus_complete_overburden_refactored_20220518_testnew_steplimit.gdml  icarus_complete_overburden_refactored_20220518_testnew_steplimit_nowires.gdml  icarus_complete_overburden_rotUV_11mar2021_nowires.gdml  icarus_crt.gdml  icarus_gc_refactored_new_nounderscore.gdml  icarus_gc_refactored_new_nounderscore_nowires.gdml  icarus_refactored_nounderscore_20230918.gdml  icarus_refactored_nounderscore_20230918_nowires.gdml  make_refactored_gdml.pl
icarusalg/Geometry/gdml/GDMLSchema/: CMakeLists.txt  gdml.xsd
icarusalg/PMT/: CMakeLists.txt
icarusalg/PMT/Algorithms/: CMakeLists.txt  SharedWaveformBaseline.cxx  SharedWaveformBaseline.h
icarusalg/Utilities/: AssnsCrosser.h  AtomicPassCounter.h  BinaryDumpUtils.h  BinningSpecs.cxx  BinningSpecs.h  CMakeLists.txt  CanvasUtils.h  ChangeMonitor.h  CommonChoiceSelectors.cxx  CommonChoiceSelectors.h  DataProductPointerMap.h  DetectorClocksHelpers.h  FHiCLutils.h  FastAndPoorGauss.h  FixedBins.h  GroupByIndex.h  IntegerRanges.h  NonRandomCounter.cxx  NonRandomCounter.h  PassCounter.h  PlotSandbox.h  PlotSandbox.tcc  ROOTutils.h  ROOTutils.tcc  RandFastGauss.h  SampledFunction.h  SimpleClustering.h  StandardSelectorFor.h  TimeInterval.h  TimeIntervalConfig.h  TrackTimeInterval.cxx  TrackTimeInterval.h  WaveformOperations.h  WeakCurrentType.cxx  WeakCurrentType.h  detectorproperties_icarus.fcl  larproperties_icarus.fcl  messages_icarus.fcl  mfLoggingClass.h  opticalproperties_icarus.fcl  (+4 more)
icarusalg/gallery/: CMakeLists.txt
icarusalg/gallery/DetectorActivityRatePlots/C++/: CMakeLists.txt  DetectorActivityRatePlots.cpp  detectoractivityrate_plots.fcl
icarusalg/gallery/MCTruthBase/: CMakeLists.txt  MCTruthAssociations.cpp  MCTruthAssociations.h  MCTruthEmEveIdCalculator.cxx  MCTruthEmEveIdCalculator.h  MCTruthEveIdCalculator.cxx  MCTruthParticleHistory.cxx  MCTruthParticleList.cxx
icarusalg/gallery/examples/DetectorActivityRatePlots/C++/: Binner.h  CMakeLists.txt  DetectorActivityRatePlots.cpp
icarusalg/gallery/examples/PMTwaveforms/C++/: CMakeLists.txt  DrawPMTwaveforms.cpp  PMTconfigToSettings.py  draw_pmt_waveforms.fcl
icarusalg/gallery/examples/PMTwaveforms/python/: WaveformBaselines.py
icarusalg/gallery/examples/galleryAnalysis/C++/: CMakeLists.txt  HitAnalysisAlg.cpp  MCAssociations.cpp  MCAssociations.h  galleryAnalysis.fcl
icarusalg/gallery/galleryAnalysis/C++/: CMakeLists.txt  galleryAnalysis.cpp
icarusalg/gallery/helpers/: CMakeLists.txt  icarus_gallery_setup
icarusalg/gallery/helpers/C++/: CMakeLists.txt  expandInputFiles.cxx  expandInputFiles.h
icarusalg/gallery/helpers/python/: ICARUSservices.py  ICARUSutils.py  README.md  galleryUtils.py
test/: CMakeLists.txt  FrameworkEventMockup.h
test/Geometry/: CMakeLists.txt  geometry_icarus_test.cxx  geometry_iterator_icarus_test.cxx  geometry_iterator_loop_icarus_test.cxx  geometry_unit_test_icarus.h
test/PMT/: CMakeLists.txt
test/PMT/Utilities/: CMakeLists.txt  WaveformOperations_test.cc
test/Utilities/: AssnsCrosser_test.cc  BinningSpecs_test.cc  CMakeLists.txt  ChangeMonitor_test.cc  FastAndPoorGauss_test.cc  FixedBins_test.cc  IntegerRanges_test.cc  NonRandomCounter_test.cc  SampledFunction_test.cc  TimeIntervalConfig_test.cc  TrackTimeInterval_test.cc  rounding_test.cc  sortLike_test.cc
ups/: product_deps  setup_for_development
